storage/innobase/srv/srv0start.cc
@@ -2622,7 +2622,11 @@ files_checked:
 	}
 
 	/* Flush the changes made to TRX_SYS_PAGE by trx_sys_create_rsegs()*/
-	if (!srv_force_recovery && !srv_read_only_mode) {
+	if (!srv_force_recovery
+#ifdef DBUG_OFF
+	    && !recv_needed_recovery
+#endif /* DBUG_OFF */
+	    && !srv_read_only_mode) {
 		bool success = buf_flush_list(ULINT_MAX, LSN_MAX, NULL);
 		ut_a(success);
 		buf_flush_wait_batch_end(NULL, BUF_FLUSH_LIST);
